syntax = "proto3";
package GateServer.Varify;

service VarifyServer
{ //获取验证码的方法
    rpc GetVarifyCode (GetVarifyReq) returns (GetVarifyRsp) {}
}

message GetVarifyReq  //请求结构
{
    string email=1;
}

message GetVarifyRsp  //响应结构
{
    int32 error=1;
    string email=2;
    string code=3;
}